[gd_scene load_steps=6 format=3 uid="uid://u3paihrbje8x"]

[ext_resource type="Script" path="res://CardTemplate.gd" id="1_rcfrl"]
[ext_resource type="Texture2D" uid="uid://djbv56smdqq60" path="res://empty_card.png" id="2_362ls"]
[ext_resource type="Theme" uid="uid://03gaf5plfqa7" path="res://texttheme.tres" id="3_34hmh"]
[ext_resource type="Script" path="res://ClickableArea.gd" id="4_01acq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wx7yr"]
size = Vector2(212, 299)

[node name="CardTemplate" type="Node2D"]
script = ExtResource("1_rcfrl")

[node name="TemplateSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_362ls")

[node name="AtkText" type="Label" parent="."]
z_index = 1
offset_left = -43.0
offset_top = 80.0
offset_right = 29.0
offset_bottom = 158.0
theme = ExtResource("3_34hmh")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 8
theme_override_constants/shadow_outline_size = 8
text = "X"

[node name="HpText" type="Label" parent="."]
z_index = 1
offset_left = 54.0
offset_top = 80.0
offset_right = 117.0
offset_bottom = 156.0
theme = ExtResource("3_34hmh")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 8
theme_override_constants/shadow_outline_size = 8
text = "X"

[node name="NameText" type="Label" parent="."]
z_index = 1
offset_left = -65.0
offset_top = -141.0
offset_right = 104.0
offset_bottom = -114.0
theme = ExtResource("3_34hmh")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 8
theme_override_constants/shadow_outline_size = 8
theme_override_font_sizes/font_size = 19
text = "SAMPLETEXT"

[node name="ClickableArea" type="Area2D" parent="."]
script = ExtResource("4_01acq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickableArea"]
position = Vector2(4, 6.5)
shape = SubResource("RectangleShape2D_wx7yr")
